Fix coordinate conversion for layerX / layerY in abs-pos block.

PaintLayer::location_ is relative to the containing block, not the
parent layer.  For a MouseEvent on a position: absolute element, we were
adding the parent layer's location to a value that already included it,
which doesn't make sense.

The behavior of layerX and layerY remains quirky and not standardized.
There is an open issue at https://github.com/w3c/uievents/issues/135.
It's unclear if the FIXME about ConvertToLayerCoords is still correct.

Bug: 856525
Change-Id: Iba5bb7b2c955b4bd526597628cd789ff0eb42e90
Reviewed-on: https://chromium-review.googlesource.com/1195648
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587202}
Former-commit-id: 237cebe7d7e2265e07c78fc73d22a02b1a80ff71